using Microsoft.AspNetCore.Builder;
using Microsoft.AspNetCore.Hosting;
using Microsoft.AspNetCore.Http;
using Microsoft.Extensions.DependencyInjection;
using Microsoft.Extensions.Hosting;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;
using Google.Protobuf.WellKnownTypes;
using Grpc.Net.Client;
using Relay.Clients;
using Relay.Services;
using TradeBot.Algorithm.AlgorithmService.v1;
using TradeBot.TradeMarket.TradeMarketService.v1;

namespace Relay
{
    public class Startup
    {
        // This method gets called by the runtime. Use this method to add services to the container.
        // For more information on how to configure your application, visit https://go.microsoft.com/fwlink/?LinkID=398940
        public void ConfigureServices(IServiceCollection services)
        {
            services.AddGrpc();
            services.AddSingleton<AlgorithmClient>( new AlgorithmClient(Environment.GetEnvironmentVariable("ALGORITHM_CONNECTION_STRING")));
            services.AddSingleton<TradeMarketClient>(new TradeMarketClient(Environment.GetEnvironmentVariable("TRADEMARKET_CONNECTION_STRING")));
            services.AddSingleton<FormerClient>(new FormerClient(Environment.GetEnvironmentVariable("FORMER_CONNECTION_STRING")));
        }

        // This method gets called by the runtime. Use this method to configure the HTTP request pipeline.
        public void Configure(IApplicationBuilder app, IWebHostEnvironment env)
        {
            if (env.IsDevelopment())
            {
                app.UseDeveloperExceptionPage();
            }

            app.UseRouting();

            app.UseEndpoints(endpoints =>
            {
                endpoints.MapGrpcService<GreeterService>();
                endpoints.MapGrpcService<RelayService>();

                endpoints.MapGet("/", async context =>
                {
                    await context.Response.WriteAsync("Communication with gRPC endpoints must be made through a gRPC client. To learn how to create a client, visit: https://go.microsoft.com/fwlink/?linkid=2086909");
                });
            });
        }
    }
}
